--- a/src/main/python/ui/crm/model/BrandsXpath/4ex7_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/4ex7_xpath.yml
@@ -2,5 +2,10 @@
 CALoginPage:
   check_box_accept: "//span[contains(text(),'By checking this box I accept')]"
 FinancialTransactionsPage:
-  client_name_element:  "(//*[@id='listBody']//tr/td[4])[%s]"
-  modified_time_element: "(//*[contains(@id,'row_')]/td[12])[%s]"
+  client_name_element:  "(//*[@id='listBody']//tr/td[3])[%s]"
+  transaction_type_element: "(//*[@id='listBody']//tr/td[4])[%s]"
+  modified_time_element: "(//*[contains(@id,'row_')]/td[8])[%s]"
+  transaction_type_drop_down: "//td[4]/div/div[1]/button"
+  transaction_type_field: "//*[@id='customAdvanceSearch']/td[4]/div/div[1]/ul/li[1]/div/input"
+SignUpFirstStepPage:
+  check_box_accept: "//span[contains(text(),'By checking this box I accept')]"
