--- a/src/test/python/resources/config/tests_ui.yml
+++ b/src/test/python/resources/config/tests_ui.yml
@@ -68,20 +68,20 @@ tests_config:
 #     - test_create_delete_affiliate_ui
 
 ############################################ HELP DESK #############################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_help_desk_ui.TestHelpDeskModuleUI
-#  class: TestHelpDeskModuleUI
-#  tests:
-#    - test_create_ticket_ui   # not run: no option to select test client in 'related to' field
-#    - test_edit_ticket_ui   # not run: no option to select test client in 'related to' field
-#    - test_pencil_ticket_ui   # not run: no option to select test client in 'related to' field
-#    - test_delete_ticket_ui   # not run: no option to select test client in 'related to' field
+- module: src.test.python.ui.automation.implementation.crm.tests_help_desk_ui.TestHelpDeskModuleUI
+  class: TestHelpDeskModuleUI
+  tests:
+    - test_create_ticket_ui   # not run: no option to select test client in 'related to' field
+    - test_edit_ticket_ui   # not run: no option to select test client in 'related to' field
+    - test_pencil_ticket_ui   # not run: no option to select test client in 'related to' field
+    - test_delete_ticket_ui   # not run: no option to select test client in 'related to' field
 #    - test_help_desk_searching_columns_ui
 
 ############################################ DOCUMENTS ##############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_documents_ui.TestDocumentsModuleUI
-  class: TestDocumentsModuleUI
-  tests:
-    - test_documents_searching_columns_ui
+#- module: src.test.python.ui.automation.implementation.crm.tests_documents_ui.TestDocumentsModuleUI
+#  class: TestDocumentsModuleUI
+#  tests:
+#    - test_documents_searching_columns_ui
 
 ######################################### TRADING ACCOUNTS ##########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_trading_ui.TestTradingModuleUI
