--- a/src/main/python/ui/crm/model/BrandsXpath/brokerxp_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/brokerxp_xpath.yml
@@ -1,3 +1,5 @@
+DocumentsPage:
+  apply_btn: "/html/body/div[20]/div[3]/div/button[1]"
 LeadViewInfo:
   convert_lead_module: "//div[@id='sidebar']//tr[3]//a"
 FinancialTransactionsPage:
